{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 34,
  "lineage": "66186374-cada-67c9-d777-f77351ba4190",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cc923e8d6407bf0",
            "domain": "vpc",
            "id": "eipalloc-09cc923e8d6407bf0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-48-4.compute-1.amazonaws.com",
            "public_ip": "54.158.48.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.lab-1-igw",
            "aws_route_table.route-table",
            "aws_route_table_association.association",
            "aws_subnet.subnet-1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:929566649726:instance/i-02f0c401435317d30",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f0c401435317d30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lab-1-terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063d6d1072381d378",
            "private_dns": "ip-10-0-0-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.39",
            "public_ip": "52.70.127.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033c6b2c4e4261981",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-012eef30b97e07dda"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0432f4518ce34a798",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012eef30b97e07dda"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_sg",
            "aws_subnet.subnet-1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:929566649726:instance/i-0fcf7b877d85d2cc5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcf7b877d85d2cc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lab-1-terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0865d343acad445aa",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0143c4d48807ce3cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b6f80913b83d73a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024dbdd66cd466a32"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab-1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:internet-gateway/igw-069e55fb153215cc2",
            "id": "igw-069e55fb153215cc2",
            "owner_id": "929566649726",
            "vpc_id": "vpc-0b61800c11a542ca4"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cc923e8d6407bf0",
            "connectivity_type": "public",
            "id": "nat-0bd5a15b1f6aa31fa",
            "network_interface_id": "eni-0dea891d72e58b130",
            "private_ip": "10.0.0.158",
            "public_ip": "54.158.48.4",
            "subnet_id": "subnet-0432f4518ce34a798",
            "tags": {
              "Name": "Nat-Gateway_Project"
            },
            "tags_all": {
              "Name": "Nat-Gateway_Project"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.lab-1-igw",
            "aws_route_table.route-table",
            "aws_route_table_association.association",
            "aws_subnet.subnet-1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:route-table/rtb-0b3323ba4d771eded",
            "id": "rtb-0b3323ba4d771eded",
            "owner_id": "929566649726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd5a15b1f6aa31fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61800c11a542ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.lab-1-igw",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.route-table",
            "aws_route_table_association.association",
            "aws_subnet.subnet-1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:route-table/rtb-02ee5c810413cba70",
            "id": "rtb-02ee5c810413cba70",
            "owner_id": "929566649726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069e55fb153215cc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IGWRouteTable"
            },
            "tags_all": {
              "Name": "IGWRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61800c11a542ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab-1-igw",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c134f6f3b4e23ce",
            "route_table_id": "rtb-0b3323ba4d771eded",
            "subnet_id": "subnet-09b6f80913b83d73a"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.lab-1-igw",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.route-table",
            "aws_route_table_association.association",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf7ea3d64a1d4d2f",
            "route_table_id": "rtb-02ee5c810413cba70",
            "subnet_id": "subnet-0432f4518ce34a798"
          },
          "dependencies": [
            "aws_internet_gateway.lab-1-igw",
            "aws_route_table.route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:security-group/sg-012eef30b97e07dda",
            "description": "allow ssh on 22 \u0026 http on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012eef30b97e07dda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_sg",
            "name_prefix": "",
            "owner_id": "929566649726",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b61800c11a542ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:subnet/subnet-0432f4518ce34a798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0432f4518ce34a798",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "929566649726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b61800c11a542ca4"
          },
          "dependencies": [
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:subnet/subnet-09b6f80913b83d73a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b6f80913b83d73a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "929566649726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0b61800c11a542ca4"
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_vpc.myvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929566649726:vpc/vpc-0b61800c11a542ca4",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c3f17cfcbdcd137",
            "default_route_table_id": "rtb-0213903cfce0f633b",
            "default_security_group_id": "sg-024dbdd66cd466a32",
            "dhcp_options_id": "dopt-0f7ad4ab70c9b6a19",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b61800c11a542ca4",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-07300eacb73a91117",
            "ipv6_cidr_block": "2600:1f10:4bf1:c700::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0213903cfce0f633b",
            "owner_id": "929566649726",
            "tags": {
              "Name": "lab1-terra"
            },
            "tags_all": {
              "Name": "lab1-terra"
            }
          }
        }
      ]
    }
  ]
}